--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@iconify/icons-logos": "^1.0.4",
     "@iconify/react": "^1.1.1",
+    "axios": "^0.19.0",
     "node-sass": "^4.10.0",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
