--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "website",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "6.11.3",
+    "node": "11.13.0"
+  },
   "dependencies": {
     "@iconify/icons-logos": "^1.0.4",
     "@iconify/react": "^1.1.1",
